// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload: Component should render correctly 1`] = `
<div
  style={Object {}}
>
  <label
    htmlFor="id"
    style={
      Object {
        "position": "relative",
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "border": "none",
          "borderRadius": "48px",
          "color": "#FFF",
          "cursor": "pointer",
          "display": "inline-block",
          "fill": "#FFF",
          "fontSize": 0,
          "margin": "0",
          "minHeight": "48px",
          "outline": "none",
          "padding": "0",
          "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
        }
      }
    >
      <Component />
    </div>
  </label>
  <input
    aria-hidden={true}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with custom icon 1`] = `
<div
  style={Object {}}
>
  <Component
    customInputStyles={Object {}}
    customLabelStyles={Object {}}
    customStyles={Object {}}
    disabled={true}
    fullWidth={true}
    iconComponent={
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <span>
          icon
        </span>
      </label>
    }
    label="label"
    name="fileNames"
    value="Select a file"
  />
  <input
    aria-hidden={true}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with custom styles 1`] = `
<div
  style={Object {}}
>
  <Component
    customInputStyles={
      Object {
        "backgroundColor": "green",
      }
    }
    customLabelStyles={
      Object {
        "backgroundColor": "blue",
      }
    }
    customStyles={
      Object {
        "backgroundColor": "red",
      }
    }
    disabled={true}
    fullWidth={true}
    iconComponent={
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": 0,
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <Unknown />
        </div>
      </label>
    }
    label="label"
    name="fileNames"
    value="Select a file"
  />
  <input
    aria-hidden={true}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with file name 1`] = `
<div
  style={Object {}}
>
  <Component
    customInputStyles={Object {}}
    customLabelStyles={Object {}}
    customStyles={Object {}}
    disabled={true}
    fullWidth={true}
    iconComponent={
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": 0,
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <Unknown />
        </div>
      </label>
    }
    label="label"
    name="fileNames"
    value="Select a file"
  />
  <input
    aria-hidden={true}
    id="id"
    name="name.csv"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with label 1`] = `
<div
  style={Object {}}
>
  <Component
    customInputStyles={Object {}}
    customLabelStyles={Object {}}
    customStyles={Object {}}
    disabled={true}
    fullWidth={true}
    iconComponent={
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": 0,
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <Unknown />
        </div>
      </label>
    }
    label="label"
    name="fileNames"
    value="Select a file"
  />
  <input
    aria-hidden={true}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;
